# espeleo_planner

./: .gitignore  CMakeLists.txt  README.md  install-deps.sh  package.xml
espeleo_planner/: .gitignore  CMakeLists.txt  README.md  package.xml
espeleo_planner/comparison_pointclouds/reference_maps/: stage_cave_v0_8m.ply
espeleo_planner/config/: general.config
espeleo_planner/include/: depth_sensor.h  frontier_entropy.h  frontier_information.h
espeleo_planner/launch/: espeleo_mapping_lidar.launch  experiment_evaluation.launch  experiment_evaluation_manual.launch  exploration_services.launch  exploration_services_manual.launch  frontier_entropy_service.launch  mesh_planner.launch  mesh_planner_exploration.launch  obstacle_detection.launch  rtabmap.launch  test_point_cloud_planner.launch
espeleo_planner/launch/point_cloud_rrt/: experiment_evaluation_pcloud_rrt.launch  publish_frontier_services.launch
espeleo_planner/rviz/: espeleo_coppelia.rviz  espeleo_coppelia_JINT_EXPLORATION.rviz  espeleo_coppelia_UFMG.rviz  espeleo_coppelia_VELOSO.rviz  espeleo_coppelia_white.rviz  espeleo_coppelia_white_PCLOUD.rviz  espeleo_coppelia_white_fixed_STL.rviz
espeleo_planner/scripts/: convert_nav_msgs_path_to_espeleo_path.py  exploration_metrics.py  mesh_planner_exploration_node.py  mesh_planner_exploration_node_RRT.py  mesh_planner_manual_node.py  mesh_planner_node.py  plan_with_fixed_point_cloud.py  plan_with_fixed_stl_file.py  plann_call.py  publish_frontiers_node.py  publish_frontiers_node_o3d.py  republish_smaller_pointcloud.py  test_with_fixed_stl_file.py
espeleo_planner/scripts/backup/: mesh_planner_exploration_node_RRT_bkp.py
espeleo_planner/scripts/mesh_planner/: graph_metrics.py  graph_search.py  mesh_helper.py  mesh_planner.py  mesh_planner_base.py  mesh_planner_base_open3d.py  mesh_planner_node.py  optimization_angle_estimation.py  pointcloud_planner_base.py  pybullet_angle_estimation.py  rrt_graph_search.py
espeleo_planner/src/: SourceSubscriber.cpp  TargetSubscriber.cpp  TargetSubscriber.h  binvox2bt.cpp  frontier_entropy.cpp  frontier_entropy_node.cpp
espeleo_planner/srv/: processAllFrontiers.srv  processAllFrontiersUsingSTLOctomap.srv  processFrontier.srv
espeleo_planner/test/: map_01_v1.stl  map_01_v2.stl  map_01_v3.stl  map_02.stl  map_02v2_many_faces.stl  map_stairs.stl  plot_obstacle_weight.py  plot_times_planning.py  steps_scene_espeleo2_lidar_6wheels.ttt  viewvox
espeleo_planner/test/coppeliasim_python_move_object/: main_move_object_timer.py
espeleo_planner/test/information_gain/: multiple_frontiers_cave.ply  multiple_frontiers_cave.stl
espeleo_planner/test/jupyter/: numpy_normal_analysis.ipynb
espeleo_planner/test/map_similarity_test/: 0_point_cloud.ply  1_point_cloud.ply  2_point_cloud.ply  3_point_cloud.ply
espeleo_planner/test/maps/: map_01_frontiers.stl  map_01_frontiers_inverted.stl  map_03_narrow_passage.stl  map_03_narrow_passage_v2.stl  map_04_stairs_perfect.stl  map_05_cavelike.stl
espeleo_planner/test/point_cloud_planning/: riemannian_pcloud.ply
espeleo_planner/test/scripts/: convert_o3d_to_graph.py  decay_function_angle_neighbors.py  expand_borders.py  expand_borders_pcloud.py  extract_centroid_normal_list_from_mesh.py  extract_frontier_test.py  extract_frontiers.py  map_comparison.py  obstacle_detection_3d_lidar.py  obstacle_detection_3d_lidar_v2.py  obstacle_detection_3d_lidar_v3.py  optimization_mesh_angle_position.py  optimization_pose_mesh_pybullet.py  output.txt  plot_angle_estimation_diferences.py  plot_angle_estimation_time.py  plot_export_legend_bounding_box.py  plot_generator_exploration_metrics.py  plot_neighbour_angle_std_histogram.py  plot_obstacle_weight.py  plot_point_cloud_graph_knn.py  plot_point_cloud_voronoi_frontiers.py  publish_mesh_obstacles.py  recon_time_metrics.py  remove_unreachable_faces.py  remove_unreachable_faces_test.py  rotation_angle_from_mesh.py  sample_mesh_to_pointcloud.py
espeleo_planner/test/src/: obstacle_detection_pcl.cpp  octomap_raytracing.cpp  publish_360_projection.cpp  republish_cloud_to_frame.cpp  transform_origin_test.cpp
espeleo_planner/urdf/: .espeleo.gazebo.swp  .espeleo.xacro.swp  espeleo2_base.urdf  espeleo2_leg.urdf  espeleo2_low_poly.urdf  espeleo2_low_poly_prismatic.urdf  espeleo2_pantilt.urdf  espeleo2_star.urdf
include/surface_recon/: CMakeLists.txt
include/surface_recon/src/: hole_filling.cpp  main.cpp  my_png.cpp  my_png.hpp  parser.hpp  pset.cpp  rm_artifacts.cpp  rm_artifacts.hpp  surface_recon.cpp  texture.cpp
launch/: rtabmap.launch
mapFiles/: .obj.mtl  map (copy).csv  meshObj.obj.mtl  meshObj_full_pcd_rgb.ply  meshObj_simplified_pcd_normals.ply
recon_surface/: .gitignore  CMakeLists.txt  README.md  package.xml
recon_surface/config/: ReconSurface.cfg  basic_recon.yaml  basic_recon_v2.yaml  basic_recon_v3.yaml  basic_recon_v4_ufmg.yaml  general.config
recon_surface/include/recon_surface/: hole_filling.hpp  my_png.hpp  parser.hpp  pset.hpp  rm_artifacts.hpp  surface_recon.hpp  texture.hpp
recon_surface/launch/: p_normal_service.launch  recon_service.launch  test_p_normal_service.launch  test_recon_service.launch
recon_surface/script/: dyn_reconfigure_client_test.py  dyn_reconfigure_server.py  publish_mesh_marker.py  test_mesh_service.py  test_p_normal_service.py
recon_surface/src/: hole_filling.cpp  main.cpp  my_png.cpp  p_normal_service_from_pointcloud.cpp  pset.cpp  recon_service_from_pointcloud.cpp  rm_artifacts.cpp  surface_recon.cpp  texture.cpp
recon_surface/srv/: MeshFromPointCloud2.srv
recon_surface/test/: estimate_times_reconstruction_from_folder.py  map_01_obstacle.ply  map_indoor_v0.ply  map_medium.ply  map_medium_mesh.stl  map_problem_far_away_points.ply  map_problem_far_away_points_v2.ply  problem_extrange_holes_in_base_walls_small.ply  shark.ply
recon_surface/test/test_plot_riemannian_graph/: plot_riemannian.py
scripts/: BibMathEns.py  MeshPathFinder.py  plann_call.py  weighted.py
src/: SourceSubscriber.cpp  SourceSubscriber.h  TargetSubscriber.cpp  TargetSubscriber.h  planner_integrate_node.cpp
test_files/: plotPoints.txt
(+49 files in other folders)
